add maven assembly to build a ZIP archive of the project
Conflicts:
	pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
             <version>3.0.3</version>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -49,6 +50,19 @@
                             </descriptors>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>zip</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <descriptors>
+                                <descriptor>src/main/assembly/zip.xml</descriptor>
+                            </descriptors>
+                        </configuration>
+                    </execution>
+
                 </executions>
             </plugin>
         </plugins>
