--- a/pom.xml
+++ b/pom.xml
@@ -12,18 +12,24 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-core</artifactId>
-            <version>2.0.0-mr1-cdh4.4.0</version>
+            <version>2.0.0-mr1-cdh4.7.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
-            <version>2.0.0-mr1-cdh4.4.0</version>
+            <version>2.0.0-mr1-cdh4.7.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.mockito</groupId>
+                    <artifactId>mockito-all</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.mrunit</groupId>
             <artifactId>mrunit</artifactId>
             <version>1.1.0</version>
-            <classifier>hadoop1</classifier>
+            <classifier>hadoop2</classifier>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -31,6 +37,7 @@
             <artifactId>trove4j</artifactId>
             <version>3.0.3</version>
         </dependency>
+
     </dependencies>
 
     <build>
