--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>Pegasus</groupId>
-    <artifactId>Pegasus</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <groupId>com.placeiq</groupId>
+    <artifactId>piqasus</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
